always show scrollbar, resolve #11

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,6 +13,7 @@ body {
     "Droid Sans", "Helvetica Neue", sans-serif;
   margin: 0px;
   background-color: $body_background;
+  overflow-y: scroll;
 }
 
 a:link, a:visited, a:active, a:hover {
